# linkedin-games-solver

./: .codex_tmp_files_list.txt  README.md  pyproject.toml  requirements.txt  spec.md
data/: puzzles.json  puzzles_generated.json  puzzles_unique.json
data/benchmarks/: queens_runs.jsonl
data/curated/queens/: example_6x6.json
docs/: generator.md  index.html  solver.md
docs/assets/: index-BREGOW3G.js  index-BdjHdpZk.css  index-BjmEQrhB.js  index-CPZNqY5b.js  index-D6CQnWs5.css  index-Phgerf0D.css
reports/: queens_bench.md  queens_bench_all.md  queens_report.md
src/linkedin_game_solver/: __init__.py  cli.py
src/linkedin_game_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/linkedin_game_solver/benchmarks/: __init__.py  queens.py  zip.py
src/linkedin_game_solver/core/: __init__.py  metrics.py  types.py
src/linkedin_game_solver/datasets/: unique.py
src/linkedin_game_solver/games/: __init__.py
src/linkedin_game_solver/games/queens/: __init__.py  generator.py  parser.py  renderer.py  solver_backtracking_bb.py  solver_baseline.py  solver_dlx.py  solver_heuristic.py  solvers.py  validator.py
src/linkedin_game_solver/games/zip/: __init__.py  generator.py
tests/: test_cli_bench.py  test_cli_generate_dataset.py  test_cli_generate_solve.py  test_cli_solve_render.py  test_dlx_count.py  test_queens_generator.py  test_queens_parser.py  test_queens_renderer.py  test_queens_solvers.py  test_queens_validator.py  test_unique_solution.py  test_zip_bench.py  test_zip_generator.py
web/src/: App.tsx  index.css
