[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-game-solver"
version = "0.1.0"
description = "Educational puzzle solver framework with a Queens implementation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Romain" }]
dependencies = []

[project.scripts]
lgs = "linkedin_game_solver.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
